Alterando a lógica de buscar com filtros