@@ -1,24 +1,40 @@
 package br.org.apae.api.paciente.domain.repository;
 
 import br.org.apae.api.paciente.domain.model.Patient;
-import br.org.apae.api.paciente.dto.filter.PatientFilterDTO;
 import jakarta.persistence.criteria.Predicate;
 import org.springframework.data.jpa.domain.Specification;
+
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 public class PatientSpecification {
-    public static Specification<Patient> filterBy(PatientFilterDTO filter) {
+
+    /**
+     * Cria uma Specification para a entidade Patient com base em um mapa de filtros dinâmicos.
+     * @param filters Um mapa onde a chave é o nome do campo e o valor é o valor a ser filtrado.
+     * @return uma Specification que pode ser usada pelo JpaRepository.
+     */
+    public static Specification<Patient> filterBy(Map<String, String> filters) {
         return (root, query, criteriaBuilder) -> {
             List<Predicate> predicates = new ArrayList<>();
 
-            if (filter.name() != null && !filter.name().trim().isEmpty()) {
-                predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("fullName")), "%" + filter.name().toLowerCase() + "%"));
-            }
+            filters.forEach((key, value) -> {
+                if (value != null && !value.isBlank()) {
+                    switch (key) {
+                        case "fullName":
+                            predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("fullName")), "%" + value.toLowerCase() + "%"));
+                            break;
+                        case "cpf":
+                            predicates.add(criteriaBuilder.equal(root.get("cpf"), value));
+                            break;
+                        case "city":
+                            predicates.add(criteriaBuilder.like(criteriaBuilder.lower(root.get("address").get("city")), "%" + value.toLowerCase() + "%"));
+                            break;
 
-            if (filter.cpf() != null && !filter.cpf().trim().isEmpty()) {
-                predicates.add(criteriaBuilder.equal(root.get("cpf"), filter.cpf()));
-            }
+                    }
+                }
+            });
 
             return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
         };
